--- a/Web/CursoEmVideo/HTML5 _ CSS3/Módulo 2/Desafios/d10/styles/style.css
+++ b/Web/CursoEmVideo/HTML5 _ CSS3/Módulo 2/Desafios/d10/styles/style.css
@@ -73,10 +73,11 @@ header p {
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.151);
     font-weight: normal;
     margin: auto;
+    padding-bottom: 50px;
 }
 
 nav {
-    text-align: left;
+    text-align: center;
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.226);
