--- a/Web/Eu/FruitClicker/style.css
+++ b/Web/Eu/FruitClicker/style.css
@@ -64,6 +64,7 @@ main div {
   margin-top: 20px;
   
   width: 280px;
+  height: 230px;
   border: 2px solid rgb(168, 168, 35);
   padding: 20px;
   border-radius: 50%;
@@ -77,6 +78,7 @@ main div:hover {
 
 div img#fruit1 {
   width: 100%;
+  height: 100%;
   border-radius: 50%;
 }
 
